ViSP 2.4.x
  - New classes
	- vpHinkley class for Hinkley's cumulative sum test computation
	- vpMePath Tracking of a white curve by using line and parabola tracker
  - New Features
  - Bug fix and improvement
	- vpDot: setMaxDotSize(double percentage) replace 
	  setNbMaxPoint(double nb) to be less image size dependent.
	  The maximal dot size is set by default to 0.25% (quarter image size)
	         setGrayLevelPrecision(double grayLevelPrecision) has been 
          added for a better management of gray dots detection.
	- vpDot2: Changes in searchDotsInArea() :
	    The algorithm search now in the boundingboxes of the bad dots.
	    Bug fixed : we could fall in an infinite loop.
	    Split accuracy private variable into grayLevelPrecision and 
	  sizePrecision. The gray level min and max are well calculated for 
	  white and black dots.
	- vpDisplayX : better management of endianness
	- vpDisplayGTK, vpDisplayGDI, vpDisplayD3D : 
	  The behavior of the following methods change to be similar
	  to vpDisplayX:
	  . getClick(..., button) : The button used to click is now an output
	  . getClickUp(..., button) : The button used to click is now an output
	  Moreover, in vpDisplayGDI, vpDisplayD3D middle button is now managed
	- vpDisplayGTK, vpDisplayGDI, vpDisplayD3D :
	  The usage of display->init(vpImage, int, int); returned a 
	  segmentation fault : bug fixed
	- vpDisplayD3D : we couldn't re-use a display after the call of the 
	  function close(vpImage). We had a black image : bug fixed.
	- vpDisplay : changes in displayRectangle():an option parameter 
	  fill has been had to precise if the displayed rectangle is filled 
	  or not. 
	- vpColor : Add orange color.
	- vpServo : To fix bug #3528 you should explicitly call vpServo::kill()
	  in your programs. Otherwise an exception 
	  vpServoException::notKilledProperly is launched by 
	  vpServo::~vpServo() destructor.
	- vpMatrix : Change Infinity Norm formula to match with the standard 