@@ -1,6 +1,6 @@
 #############################################################################
 #
-# $Id: CMakeLists.txt,v 1.11 2007-08-21 14:01:49 fspindle Exp $
+# $Id: CMakeLists.txt,v 1.1 2007-08-21 14:01:49 fspindle Exp $
 #
 # Copyright (C) 1998-2006 Inria. All rights reserved.
 #
@@ -35,30 +35,28 @@
 #
 #############################################################################
 
-# Set SRC_SUBDIRS variable to all the sub directories we want to parse during
-# the build process. 
+# SOURCE variable corresponds to the list of all the sources to build binaries.
+# The generate binary comes by removing the .cpp extension to
+# the source name.
 #
-# If you add/remove a directory, modify here
-SET (SRC_SUBDIRS
-  histogram
-  image
-  framegrabber
-  homography
-  math
-  parse-argv
-  pose-estimation
-  servo-afma4
-  servo-afma6
-  servo-biclops
-  servo-ptu46
-  servo-simu
-  simulator
-  tools
-  tracking
+# If you want to add/remove a source, modify here
+SET (SOURCE
+  keyboard.cpp
 )
 
-# Build process propagation in the sub directories
-SUBDIRS(${SRC_SUBDIRS})
+# rule for binary build
+FOREACH(source ${SOURCE})
+  # Compute the name of the binary to create
+  GET_FILENAME_COMPONENT(binary ${source} NAME_WE)
+
+  # From source compile the binary and add link rules
+  ADD_EXECUTABLE(${binary} ${source})
+  TARGET_LINK_LIBRARIES(${binary} ${VISP_INTERN_LIBS} ${VISP_EXTERN_LIBS})
+
+  # Add test
+  #ADD_TEST(${binary} ${binary})
+
+ENDFOREACH(source)
 
 # customize clean target 
 SET_DIRECTORY_PROPERTIES(PROPERTIES 
