@@ -2,6 +2,8 @@ ViSP 2.4.x
   - New classes
 	- vpHinkley class for Hinkley's cumulative sum test computation
 	- vpMePath Tracking of a white curve by using line and parabola tracker
+	- vpKeyboard Gets a key from the keyboard without waiting for the 
+	  enter key.
   - New Features
   - Bug fix and improvement
 	- vpDot: setMaxDotSize(double percentage) replace 
